----------
v4.3.0-git
----------

[mjr] Add ability to store original versions of contact photos when resizing
      them for display.
[mjr] Add tag search to advanced search (Request #13693).
[mms] Added the addGroup API method.
[mjr] Add ability to add special characters to the alpha pager.
[jan] Return ETags with browse() API method.
[jan] Support multi-value RDNs in LDAP DN attributes (horde@iotti.biz, Request
      #11889).


-------
v4.2.11
-------

[mjr] Fix regression in removing all contacts from a single address book in the
      SQL driver (Bug #14145, Guenter Bartsch
      <guenter.bartsch@vista-rasch.com>).


-------
v4.2.10
-------

[mjr] Fix fatal test error related to Content_Tagger.


------
v4.2.9
------

[mjr] Better prevention of importing duplicate contacts with same email
      addresses via the API (Bug #14119).
[mjr] Remove object reference from Content when object is deleted (Bug #14112).
[mjr] Remove tags from Content when tagged object is deleted (Bug #14112).
[mjr] Allow API to search all email type fields when calling getField().
[mjr] Fix removing all contacts owned by a specific user.
[jan] Fix inserting and updating photos with Oracle backends.
[mjr] Fix incorrectly populating email field when importing vCard (Bug #14046).


------
v4.2.8
------

[mjr] Fix issue where sidebar links point to incorrect address book.


------
v4.2.7
------

[jan] Fix error when removing user data.


------
v4.2.6
------

[jan] Don't try to load Content application if tags are disabled.
[mjr] Fix adding tags to new contacts (Bug #13884).
[jan] Fix waiting for replication on LDAP backend.


------
v4.2.5
------

[jan] Fix export format of tags to vCard 3.0 categories (Bug #13800).


------
v4.2.4
------

[jan] Use the SHOW permission to determine the sidebar address book list.


------
v4.2.3
------

[jan] Export nicer display names for users and resources via WebDAV.
[jan] Export custom owner and read-only properties via WebDAV.