@@ -2,6 +2,8 @@
 v4.3.0-git
 ----------
 
+[jan] Change sort direction of birthday/anniversary year picker (Request
+      #11837).
 [mjr] Add ability to store original versions of contact photos when resizing
       them for display.
 [mjr] Add tag search to advanced search (Request #13693).
